# ledger-agent-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ledger-cli.example.toml  pyproject.toml
.claude/skills/: ledger-cli.skill.md
.github/workflows/: ci.yml
docs/: agent-usage.md  cli-commands.md  data-model.md
docs/superpowers/plans/: 2026-06-02-incremental-import-delete.md  2026-06-15-agent-first-cli-engineering.md
docs/superpowers/specs/: 2026-06-02-incremental-import-delete-design.md  2026-06-15-agent-first-cli-engineering-design.md
examples/: sample_gl.csv  sample_tb.csv
examples/mappings/: gl_zh.json  tb_zh.json
src/ledger_agent_cli/: audit_log.py  cli.py  config.py  db.py  errors.py  jsonio.py  output.py  schema.sql  sql_guard.py
src/ledger_agent_cli/chat/: engine.py  tools.py
src/ledger_agent_cli/importers/: __init__.py  common.py  gl.py  modes.py  tb.py
src/ledger_agent_cli/mutations/: __init__.py  delete.py
src/ledger_agent_cli/queries/: __init__.py  accounts.py  reconcile.py  saved.py  trace.py  variance.py
tests/: conftest.py  test_audit_log.py  test_cli_basics.py  test_config.py  test_db.py  test_delete_commands.py  test_import_common.py  test_import_gl_tb.py  test_import_modes.py  test_output.py  test_package.py  test_reconcile.py  test_saved_queries.py  test_sql_guard.py  test_structured_errors.py  test_trace_depreciation.py  test_variance.py
