[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-agent-cli"
version = "0.1.0"
description = "JSON CLI for importing and querying accounting ledgers with agent-safe commands."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ledger-cli = "ledger_agent_cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ledger_agent_cli = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
